Comienzo pantalla de bienvenida. Creación de layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ColorMix</string>
+    <string name="desc_welcome">MEZCLA tus colores para obtener otros nuevos y ¡Descubre un mundo lleno de color!</string>
 </resources>
