Pantalla Principal: ya aparece el icono en grande de la pintura y comprobamos que podemos cambiar de color al cambiar de item en el menú de MainActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="title_borrar">Borrar</string>
     <string name="title_paleta">Paleta</string>
     <string name="title_principal">Color MIX</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_principal_fragment">ColorMIX</string>
+    <string name="hello_paleta_fragment">Paleta</string>
+    <string name="principal_fragment_title">¡Pulsa sobre la paleta y mezcla los colores que más te gusten!</string>
 </resources>
