Paleta de colores finalizada. Se permite elegir un color de la paleta y se añade al fragmento principal donde está la imagen de mezclado.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello_principal_fragment">ColorMIX</string>
-    <string name="hello_paleta_fragment">Paleta</string>
+    <string name="hello_paleta_fragment">¿Qué color deseas mezclar?</string>
     <string name="principal_fragment_title">¡Pulsa sobre la paleta y mezcla los colores que más te gusten!</string>
     <string name="mi_color_seleccionado">Mi color seleccionado</string>
     <string name="dibujo_mezclado">Dibujo mezclado</string>
